--- a/grocercheck/map/static/css/sponsors.css
+++ b/grocercheck/map/static/css/sponsors.css
@@ -20,7 +20,7 @@ div.sponsorprofiles:hover {
 
 div.sponsorprofiles img {
     width: 100%;
-    height: calc(calc(100vw - 16px) / 5);
+    height: calc(calc(100vw - 41px) / 5);
     height: auto;
     object-fit: cover;
     height: auto;
